# knowledge-engine-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
apps/: __init__.py
apps/ke_api/: __init__.py  main.py  models.py
apps/ke_cli/: __init__.py  main.py
apps/ke_cli/commands/: chunk.py  claim.py  doc.py  embed.py  evidence.py  quality.py
apps/ke_db/: __init__.py  chunks.py  claims.py  connection.py  documents.py  embeddings.py  evidence.py  quality.py  retrieval.py  utils.py
apps/ke_ui/: __init__.py  app.py
apps/ke_ui/pages/: 10_Add_Claims.py  11_Add_Evidence.py  1_Status.py  2_Importer.py  3_Taxonomy_Browser.py  4_DQ_Report.py  5_DB_Migrations.py  6_Dashboard.py  7_Add_Document.py  8_Document_Detail.py  9_Add_Chunks.py
apps/ke_ui/ui_lib/: __init__.py  db.py  importer.py  state.py
db/: docker-compose.yml
db/initdb/: 002_seed_taxonomy.sql  00_init.sql
db/migrations/: 000_schema_migrations.sql  001_extensions_and_helpers.sql  002_meta_taxonomy.sql  003_meta_glossary.sql  004_meta_controls.sql  005_evidence_enums.sql  006_evidence_document.sql  007_evidence_revision.sql  008_evidence_chunk.sql  009_evidence_claim.sql  010_evidence_span.sql  011_quality_gates.sql  012_vector_ann_index.sql  013_db_roles.sql
db/scripts/: create_roles.sh  db_backup.sh  db_restore.sh  migrate.sh  verify_permissions.sh
docs/: api.md  architecture.md  db.md  db_migrations.md  embeddings.md  manual_workflow.md  meta_importer.md  retrieval.md  security.md  ui.md
meta/: __init__.py
meta/importer/: __init__.py  dq_report.py  import_taxonomy.py  normalizer.py  outputs.py  parser.py  splitter.py  typo_map.py
tests/: __init__.py  test_placeholder.py
tests/fixtures/: generate_expected.py  sample_taxonomy.csv
tests/fixtures/expected/: dq_report.md  taxonomy_clean.csv  taxonomy_tree.json  taxonomy_tree.yaml  terms_normalized.csv
tests/test_api/: test_integration.py
tests/test_db/: test_integration.py  test_roles.py  test_schema.py
tests/test_importer/: __init__.py  test_golden.py  test_normalizer.py  test_splitter.py
tests/test_ke_db/: __init__.py  test_embeddings.py  test_retrieval.py  test_utils.py
tests/test_ui/: test_smoke.py
